--- a/styles.css
+++ b/styles.css
@@ -8,6 +8,7 @@ body {
     height: 100vh;
     display: flex;
     background: #E2ECFF;
+    font-family: 'Gloria Hallelujah', cursive;
 }
 
 .wrapper {
