--- a/styles.css
+++ b/styles.css
@@ -29,7 +29,7 @@ body {
 .memory-game {
     width: 640px;
     height: 640px;
-    margin: auto;
+    margin: 0 auto 50px auto;
     display: flex;
     flex-wrap: wrap;
     perspective: 1000px;
@@ -68,4 +68,9 @@ body {
 
 .front-face {
     transform: rotateY(180deg);
+}
+
+.me {
+    margin: auto;
+    padding-bottom: 20px;
 }
